# colorit

./: .hgignore  AUTHORS  Makefile.am  TODO  configure.ac
src/: Makefile.am  colorit.h  colorit_init.c  colorit_preload.c  colorize_term.c  colorize_term.h  lexer.c  lexer.l  main.c  parser.y  parser_util.c  parser_util.h
tests/: Makefile.am  sample1.txt  sample2.txt  sample3.txt.bz2  sample_emerge1.txt  sample_emerge2.txt  sample_libtool1.txt  sample_scanner1.txt  sample_trash_input.txt  test_gcc.sh  test_gcc2.sh  test_grammar1.sh  test_libtool1.sh  test_make1.sh  test_preload1.sh  test_scanner1.sh  test_trash_input1.sh  test_trash_input2.sh  utils.sh
